[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfeintact"
version = "1.4.1"
description = "A bioinformatics tool for detecting defects in HIV-1 proviral sequences."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Imogen Wright", email = "imogen@hyraxbio.co.za" },
    { name = "British Columbia Centre for Excellence in HIV/AIDS", email = "vmysak@bccfe.ca" },
]
dependencies = [
    "appdirs>=1.4.3",
    "biopython>=1.71",
    "click>=6.7",
    "numpy>1.19.5",
    "scipy>=1.6.0",
]


[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "flake8",
    "flake8-pyproject",
    "mypy>=0.800",
]

[project.scripts]
cfeintact = "cfeintact.main:cli"

[tool.hatch.build.targets.sdist]
include = [ "src/cfeintact" ]

[tool.flake8]
ignore = ["XE231",
          "XE241",
          "E302",  # expected N blank lines, found Y
          "E303",  # too many blank lines
          "E711",  # comparison to None should be 'if cond is None:'
          "E701",  # multiple statements on one line
          ]
per-file-ignores = [
    "__init__.py:F401",
]
max-line-length = 120
