[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfeintact"
version = "1.16.0"
description = "A bioinformatics tool for detecting defects in HIV-1 proviral sequences."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Imogen Wright", email = "imogen@hyraxbio.co.za" },
    { name = "British Columbia Centre for Excellence in HIV/AIDS", email = "vmysak@bccfe.ca" },
]
dependencies = [
    "biopython==1.83",
    "click>=6.7",
    "scipy>=1.6.0",
    "aligntools @ git+https://github.com/cfe-lab/aligntools.git@v1.0.2",
]

[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
    "requests",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "flake8",
    "mypy==1.9.0",
    "types-requests",
]

[project.scripts]
cfeintact = "cfeintact.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [ "src/cfeintact" ]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "overnight: for tests that take hours to complete (deselect with '-m \"not overnight\"')",
  "serial"
]

[tool.mypy]
files = ["src", "tests"]
strict_optional = true
allow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pytest.*"]
ignore_missing_imports = true
